--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                         </p>
                     </div>
                     <div class="col-md-4">
-                        <h3 style="margin: 0;">Олекcей</h3>
+                        <h3 style="margin: 0;">Алекcей</h3>
                         <small style="margin: 0;">11.00.20</small>
                         <p>
                             Мне нужен был node js разработчик. И тут я его нашел, спасибо
