--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="row container-fluid" style="margin-top: 10px;">
             <div class="col-md-2">
                 <div class="user-img">
-                    <img class="user-img" src="http://risovach.ru/thumb/upload/200s400/2014/05/generator/krasivyy-paren_50661337_orig_.jpeg?6rlbr" alt="">
+                    <img class="user-img" src="https://i.imgur.com/xoiWtaE.png" alt="">
                 </div>
                 <div class="user-text">
                     <p>Степан Листов</p>
